--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://v3.juncture-digital.org/index.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/juncture-digital/css/index.css" rel="stylesheet">
 <main class="page-content" aria-label="Content" style="display:none;">
   {{ content }}
 </main>
 <script type="module">
-    import 'https://v3.juncture-digital.org/wc/dist/js/index.js'
-    import { mount } from 'https://v3.juncture-digital.org/index.js'
+    import 'https://cdn.jsdelivr.net/npm/juncture-digital/js/index.js'
+    import { mount } from 'https://cdn.jsdelivr.net/npm/juncture-digital/js/ghp.js'
     window.jekyll = {
         baseurl: '{{ site.baseurl }}',
         source: {
