--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 </main>
 <script type="module">
     import 'https://v3.juncture-digital.org/wc/dist/js/index.js'
-    import { mount } from 'https://v3.juncture-digital.org/wc/dist/js/ghp.js'
+    import { mount } from 'https://v3.juncture-digital.org/wc/src/ghp.js'
     window.jekyll = {
         baseurl: '{{ site.baseurl }}',
         source: {
