--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,18 @@
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://v3.juncture-digital.org/wc/dist/css/index.css" rel="stylesheet">
-<main class="page-content" aria-label="Content" style="display:none;">
+<main class="page-content" aria-label="Content">
   {{ content }}
 </main>
 <script type="module">
     import 'https://v3.juncture-digital.org/wc/dist/js/index.js'
     import { mount } from 'https://v3.juncture-digital.org/wc/src/ghp.js'
+    
+    let root = document.body.querySelector('main')
+    console.log(root)
+    let html = root.innerHTML
+    console.log(html)
+
     window.jekyll = {
         baseurl: '{{ site.baseurl }}',
         source: {
