--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://v3.juncture-digital.org/wc/dist/css/index.css" rel="stylesheet">
+<!-- <link href="https://v3.juncture-digital.org/wc/dist/css/index.css" rel="stylesheet"> -->
 <main class="page-content" aria-label="Content">
   {{ content }}
 </main>
 <script type="module">
-  import 'https://v3.juncture-digital.org/wc/dist/js/index.js'
-  import { mount } from 'https://v3.juncture-digital.org/wc/src/ghp.js'
+  // import 'https://v3.juncture-digital.org/wc/dist/js/index.js'
+  // import { mount } from 'https://v3.juncture-digital.org/wc/src/ghp.js'
   
   let root = document.body.querySelector('main')
   console.log(root)
