--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,30 +1,21 @@
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- <link href="https://v3.juncture-digital.org/wc/dist/css/index.css" rel="stylesheet"> -->
-<main class="page-content" aria-label="Content">
+<link href="https://v3.juncture-digital.org/wc/src/index.css" rel="stylesheet">
+<main class="page-content" aria-label="Content" style="display:none;">
   {{ content }}
 </main>
 <script type="module">
-  // import 'https://v3.juncture-digital.org/wc/dist/js/index.js'
-  // import { mount } from 'https://v3.juncture-digital.org/wc/src/ghp.js'
-  
-  let root = document.body.querySelector('main')
-  console.log(root)
-  let html = root.innerHTML
-  console.log(html)
-
-  /*
-  window.jekyll = {
-      baseurl: '{{ site.baseurl }}',
-      source: {
-        owner: `{{ site.github.owner_name }}`,
-        repository: `{{ site.github.repository_name }}`,
-        branch: `{{ site.github.source.branch }}`,
-        path: `{{ page.path }}`
+    import 'https://v3.juncture-digital.org/wc/dist/js/index.js'
+    import { mount } from 'https://v3.juncture-digital.org/wc/src/ghp.js'
+    window.jekyll = {
+        baseurl: '{{ site.baseurl }}',
+        source: {
+          owner: `{{ site.github.owner_name }}`,
+          repository: `{{ site.github.repository_name }}`,
+          branch: `{{ site.github.source.branch }}`,
+          path: `{{ page.path }}`
+        }
       }
-    }
-  mount()
-  console.log(window.config)
-  */
-
+    mount()
+    console.log(window.config)
 </script>
