--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://v3.juncture-digital.org/images/favicon.ico" rel="icon" type="image/png"/>
 <script>window.jekyll = {site:{baseurl:'{{site.baseurl}}',github:{owner_name:'{{site.github.owner_name}}',repository_name:'{{site.github.repository_name}}',source:{branch:'{{site.github.source.branch}}'}}},page:{path:'{{page.path}}',dir:'{{page.dir}}',name:'{{page.name}}'}}</script>
 <main style="visibility:hidden;">{{ content }}</main>
-<script src="https://cdn.jsdelivr.net/npm/juncture-digital/js/ghp.js" type="module"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/juncture-digital/js/ghp.js" type="module"></script>-->
+<script src="https://v3.juncture-digital.org/ghp.js" type="module"></script>
